project(letsAC)

#add_executable(x.exe score-1585.cpp ../leetcode/ReverseInteger.cpp)
#add_executable(x.exe leetcode/palindrome.cpp)

add_executable(R3D general/Reverse3digit.cpp)
add_executable(QS general/QuickSort.cpp)
add_executable(SegmentTree general/SegmentTree.cpp)
add_executable(bs template/BinarySearchTemplate.cpp)